# lumen-blocks

./: Cargo.toml  README.md  justfile  shell.nix
.devcontainer/: Dockerfile  README.md  devcontainer.env  devcontainer.json
.github/: FUNDING.yml
blocks/: Cargo.toml  tailwind.config.js  tailwind.css
blocks/assets/: tailwind.css
blocks/examples/: accordion_example.rs  aspect_ratio_example.rs  avatar_example.rs  button_example.rs  checkbox_example.rs  collapsible_example.rs  context_menu_example.rs  dropdown_example.rs  form_example.rs  hover_card_example.rs  main.rs  menubar_example.rs  progress_example.rs  switch_example.rs  toast_example.rs
blocks/src/: lib.rs
blocks/src/components/: accordion.rs  aspect_ratio.rs  avatar.rs  button.rs  checkbox.rs  collapsible.rs  context_menu.rs  dropdown.rs  hover_card.rs  input.rs  label.rs  menubar.rs  mod.rs  progress.rs  side_sheet.rs  switch.rs  toast.rs
docsite/: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js  tailwind.css
docsite/assets/: _redirects  tailwind.css
docsite/docs/: Cargo.toml  build.rs
docsite/docs/assets/: person-1.avif  person-3.avif
docsite/docs/docs-src/0.1/: book.toml
docsite/docs/docs-src/0.1/src/: SUMMARY.md  index.md
docsite/docs/docs-src/0.1/src/accordion/: index.md
docsite/docs/docs-src/0.1/src/aspect-ratio/: index.md
docsite/docs/docs-src/0.1/src/avatar/: index.md
docsite/docs/docs-src/0.1/src/button/: index.md
docsite/docs/docs-src/0.1/src/checkbox/: index.md
docsite/docs/docs-src/0.1/src/collapsible/: index.md
docsite/docs/docs-src/0.1/src/context-menu/: index.md
docsite/docs/docs-src/0.1/src/dropdown/: index.md
docsite/docs/docs-src/0.1/src/form/: index.md
docsite/docs/docs-src/0.1/src/hover-card/: index.md
docsite/docs/docs-src/0.1/src/installation/: index.md
docsite/docs/docs-src/0.1/src/menubar/: index.md
docsite/docs/docs-src/0.1/src/progress/: index.md
docsite/docs/docs-src/0.1/src/side-sheet/: index.md
docsite/docs/docs-src/0.1/src/switch/: index.md
docsite/docs/docs-src/0.1/src/toast/: index.md
docsite/docs/src/: docs.rs  lib.rs
docsite/docs/src/doc_examples/: accordion_examples.rs  aspect_ratio_examples.rs  avatar_examples.rs  button_examples.rs  checkbox_examples.rs  collapsible_examples.rs  context_menu_examples.rs  dropdown_examples.rs  form_examples.rs  hover_card_examples.rs  menubar_examples.rs  mod.rs  progress_examples.rs  side_sheet_examples.rs  switch_examples.rs  toast_examples.rs
docsite/src/: main.rs
docsite/src/components/: component_card.rs  feature_card.rs  layout.rs  mod.rs  navbar.rs
docsite/src/layouts/: docs_layout.rs  main_layout.rs  mod.rs
docsite/src/pages/: err_404.rs  home.rs  mod.rs
media/: lumen-blocks-logo.pxd  lumen-blocks-preview.pxd
