[package]
name = "laminar-blocks"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
keywords = ["gui", "dioxus", "components"]
categories = ["gui", "wasm"]
authors = ["Daniel D’Aquino <daniel@daquino.me>"]
license = "MIT"
homepage = "https://github.com/Leaf-Computer/laminar-blocks"
repository = "https://github.com/Leaf-Computer/laminar-blocks"

[dependencies]
dioxus-lib.workspace = true
dioxus-time = "=0.1.0-alpha.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", package = "dioxus-primitives", rev = "254ddadb35b2c6eac10902438edeff8a2276f1d2" }
tracing.workspace = true
lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }
log = "0.4"

[dev-dependencies]
dioxus.workspace = true
env_logger = "0.10"
