[package]
name = "lumen-blocks"
version = "0.1.0"
edition = "2024"
description = "Accessible, styled, opinionated components for Dioxus inspired by the shadcn UI and built on Dioxus Primitives"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "shadcn", "tailwind"]
categories = ["gui", "wasm"]
authors = ["Daniel D’Aquino <daniel@daquino.me>"]
license = "MIT"
homepage = "https://lumenblocks.dev"
repository = "https://github.com/Leaf-Computer/lumen-blocks"

[dependencies]
# dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main" }
dioxus-lib = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "main" }
dioxus-time = "=0.1.0-alpha.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", package = "dioxus-primitives", rev = "254ddadb35b2c6eac10902438edeff8a2276f1d2" }
tracing.workspace = true
lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }
log = "0.4"

[dev-dependencies]
dioxus.workspace = true
env_logger = "0.10"
