[package]
name = "docs"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
use-mdbook = { workspace = true }
dioxus = { workspace = true, features = ["router"] }
mdbook-shared = { workspace = true }
laminar-blocks.workspace = true
lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }

[build-dependencies]
mdbook-gen = { workspace = true, features = ["manganis"] }
mdbook-shared = { workspace = true }
dioxus-autofmt = { version = "0.6.0" }
prettyplease = "0.2.20"
syn = { workspace = true }
